registryGitOps/manifests/canary-demo/deployment-canary.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: canary-demo-canary
  namespace: canary-demo
  labels:
    app: canary-demo
    version: canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: canary-demo
      version: canary
  template:
    metadata:
      labels:
        app: canary-demo
        version: canary
    spec:
      containers:
        - name: canary-demo
          image: ghcr.io/ultimateomnitrix/platform-monorepo/canary-demo:canary
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 10m
              memory: 16Mi
            limits:
              cpu: 25m
              memory: 32Mi
